# FP_SARAA

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
Authentication/: forms.py  models.py  urls.py  views.py
Authentication/migrations/: 0001_initial.py
Authentication/templates/Authentication/: enter_password.html  login.html  management.html  register.html  user_confirm_delete.html  user_form.html
ChatHub/: admin.py  apps.py  chroma_utils.py  forms.py  models.py  urls.py  views.py
ChatHub/migrations/: 0001_initial.py  0002_alter_chatchannel_user.py  0002_alter_chatmessage_options.py  0003_alter_chatchannel_user.py
ChatHub/static/ChatHub/css/: chatInterface.css  home.css
ChatHub/templates/ChatHub/: chatInterface.html  home.html  raw.html  test.html
FP_SARAA/: asgi.py  settings.py  urls.py  wsgi.py
ModelForge/: apps.py  views.py
chromadb/: chroma.sqlite3
