[project]
name = "fp-saraa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.16",
    "django>=5.2.5",
    "django-htmx>=1.23.2",
    "langchain-community>=0.3.27",
    "markdown>=3.8.2",
    "ollama>=0.5.3",
]
